SFDC Automation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Rental_Price_Tier__c</fullName>
        <label>Rental Price Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reported_to_BOD__c</fullName>
        <description>Field to be used internally in Sales Ops to record if the account was reported to the Board of Directors in the list of key accounts to follow</description>
        <label>Reported to BOD</label>
        <picklist>
            <picklistValues>
                <fullName>Q4 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2014</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RiskStatusAtRisk__c</fullName>
        <description>Roll-up count od Customer/Branch records with At Risk status</description>
        <label>RiskStatusAtRisk</label>
        <summaryFilterItems>
            <field>Customer_Branch__c.Risk_Status__c</field>
            <operation>equals</operation>
            <value>At Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RiskStatusCBCount__c</fullName>
        <description>Count of Customer/Branch Records to calculate the Risk Status %</description>
        <label>RiskStatusCBCount</label>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RiskStatusGrowth__c</fullName>
        <description>Roll-up Summary Count of Customer-Branches with status of Growth</description>
        <label>RiskStatusGrowth</label>
        <summaryFilterItems>
            <field>Customer_Branch__c.Risk_Status__c</field>
            <operation>equals</operation>
            <value>Growth</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RiskStatusNoStatus__c</fullName>
        <description>Rollup Count of Customer/Branch records with No Status in risk status field.</description>
        <label>RiskStatusNoStatus</label>
        <summaryFilterItems>
            <field>Customer_Branch__c.Risk_Status__c</field>
            <operation>equals</operation>
            <value>No Status, &quot;&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RiskStatusStable__c</fullName>
        <description>Roll-up count of Customer/Branch records with Stable status</description>
        <label>RiskStatusStable</label>
        <summaryFilterItems>
            <field>Customer_Branch__c.Risk_Status__c</field>
            <operation>equals</operation>
            <value>Stable</value>
        </summaryFilterItems>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Risk_ID__c</fullName>
        <label>Risk ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RyderProbabilityMatch__c</fullName>
        <label>Accuracy Probability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ryder_Specific_Loc_Type__c</fullName>
        <description>Ryder classification of customer locations</description>
        <label>Ryder Specific Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Assembly Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing Center</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAM_Account_Source__c</fullName>
        <label>SAM Account Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Buyers Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exp. With Ryder/Prev. customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of mouth/Business assoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce called/visited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet – Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk in/Drive By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAM_Cust_ID__c</fullName>
        <description>Migrated data from SAM</description>
        <label>SAM_Cust_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCS_Collaboration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCS Collaboration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Desc__c</fullName>
        <formula>SIC_Code__r.ext_SICCodeID__c  + &apos;-&apos; +  SIC_Code__r.SIC_Code_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Ryder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SIC that Ryder uses to identify the account. Typically used to clarify situations like Splash Transportation that would normally be classified as a transportation company but, since we know they are the transportation subsidiary of Dr. Pepper, we consider it Food &amp; Beverage.</description>
        <label>SIC Code Ryder</label>
        <referenceTo>SIC_Code__c</referenceTo>
        <relationshipLabel>Accounts (SIC Code Ryder)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIC Code</label>
        <referenceTo>SIC_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STATUS_ACTIVE__c</fullName>
        <description>Customer status to control visibility.</description>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SapID__c</fullName>
        <description>The Sap ID of the employee that comes from the employee needs.</description>
        <label>SapID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Duns__c</fullName>
        <description>Site Number</description>
        <label>Site Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Changes__c</fullName>
        <inlineHelpText>Are speed changes authorized and by whom</inlineHelpText>
        <label>Speed Changes</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stable_Status_Percent__c</fullName>
        <formula>IF(AND(RiskStatusStable__c != 0, RiskStatusCBCount__c != 0), RiskStatusStable__c / RiskStatusCBCount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stable Status %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>Support Level as defined by the National Field Maintenance Managers</description>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top10Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if it is a top 10 account or not.</description>
        <label>Top 10 Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Active_Vehicles__c</fullName>
        <description>Roll up sum of vehicles</description>
        <label>Total Active Vehicles</label>
        <summarizedField>Customer_Branch__c.VEH_COUNT__c</summarizedField>
        <summaryForeignKey>Customer_Branch__c.Ryder_HQ_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Competitive_Units__c</fullName>
        <description>This field contains the sum of competitive vehicle total from related records on account. This count excludes Trailers from the totals</description>
        <inlineHelpText>This field contains the sum of competitive vehicle total from related records on account. This count excludes Trailers from the totals</inlineHelpText>
        <label>Competitive Vehicle Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NRV_Vehicles__c</fullName>
        <label>Total NRV Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_vehicle_count__c</fullName>
        <label>Best overall vehicle count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UTC_Assigned__c</fullName>
        <label>UTC Assigned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC_Lead_ID__c</fullName>
        <description>Migrated data from SAM</description>
        <label>UTC_Lead_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVS_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UVS Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UVS_Truck_Count__c</fullName>
        <description>Total Number of Trucks Purchased</description>
        <inlineHelpText>Total Number of Trucks Purchased</inlineHelpText>
        <label>UVS Truck Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UVS_Type__c</fullName>
        <label>UVS Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdatedFSLRPMFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to check if this account&apos;s FSL and RPM fields should be recalculated or not!</description>
        <label>UpdatedFSLRPMFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_in_SAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated in SAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_count_source__c</fullName>
        <label>Vehicle count source</label>
        <picklist>
            <picklistValues>
                <fullName>-- None --</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Customer__c</fullName>
        <label>Warranty Customer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Training_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is for RydeSmart Non-Key Accounts when they will complete web training. The flag will be manually updated by the telematic vendor employee.  This person will get access to Salesforce in Phase 3.</description>
        <label>Web Training Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>addr_verified_date__c</fullName>
        <label>Address Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS( TEXT(AccountSource) , &quot;Data.com&quot;),CONTAINS( TEXT(AccountSource) , &quot;Jigsaw&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ext_Rental_Id__c</fullName>
        <description>Used for Pure Rental Accounts</description>
        <externalId>true</externalId>
        <label>ext_Rental_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_CustProspectID__c</fullName>
        <description>Used for integration to determine the CustProspectID for child accounts</description>
        <formula>BLANKVALUE(CustProspectID__c, Parent.CustProspectID__c)</formula>
        <label>int_CustProspectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to__c</fullName>
        <label>fordata</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>LesseeNo__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Site_Duns__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>STATUS_ACTIVE__c</columns>
        <columns>DB_Loc_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_HQ_Accounts</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LesseeNo__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>DB_Loc_Type__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>STATUS_ACTIVE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DB_Loc_Type__c</field>
            <operation>equals</operation>
            <value>Headquarters</value>
        </filters>
        <filters>
            <field>RYDER_LOC_TYPE__c</field>
            <operation>equals</operation>
            <value>Headquarters</value>
        </filters>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>All HQ Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_HQ_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LesseeNo__c</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>CustomerTypeID__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Ryder_Parent_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>All HQ Customers</label>
    </listViews>
    <listViews>
        <fullName>All_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>CustomerTypeID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>DB_Loc_Type__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>All Prospects</label>
        <sharedTo>
            <group>SystemAdmin</group>
            <role>TSA_Central</role>
            <role>TSA_Manager</role>
            <role>TSA_Northeast</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pure_Rental_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>NATL_RNTL_CUST_ID__c</columns>
        <columns>Account_Type__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Account_Classification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>Rental</value>
        </filters>
        <label>All Pure Rental Accounts</label>
        <sharedTo>
            <group>SystemAdmin</group>
            <role>DirectorofRentalCanada</role>
            <role>DirectorofRentalCentral</role>
            <role>DirectorofRentalNortheast</role>
            <role>DirectorofRentalSoutheast</role>
            <role>DirectorofRentalWest</role>
            <role>FMCRental</role>
            <role>NationalRentalCustomerAdvocate</role>
            <role>NationalRentalMgrCanada</role>
            <role>NationalRentalMgrCentral</role>
            <role>NationalRentalMgrNortheast</role>
            <role>NationalRentalMgrSoutheast</role>
            <role>NationalRentalMgrWest</role>
            <roleAndSubordinates>FMCRental</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enterprise_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SIC</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>LesseeNo__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CO_RYDER_ANNSRY__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Additional_Classifications__c</field>
            <operation>includes</operation>
            <value>Enterprise Account</value>
        </filters>
        <label>Enterprise Accounts</label>
        <sharedTo>
            <group>Enterprise_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Former_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FormerCustomer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Former Customers</label>
        <sharedTo>
            <role>TSA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccountsNationalRental</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>NATL_RNTL_CUST_ID__c</columns>
        <columns>Site_Duns__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <roleAndSubordinates>SeniorMgrNationalRental</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Account_Assignments</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Classification__c</columns>
        <columns>STATUS_ACTIVE__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Account Assignments</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts9</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Site_Duns__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <sharedTo>
            <roleAndSubordinates>SeniorMgrNationalRental</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Accounts_Not_Contacted_in_2_Months</fullName>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>LesseeNo__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Classification__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Last_12_months_FSL_revenue__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:63</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>My Accounts Not Contacted in 2 Months</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts_including_Inactive</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Account_Classification__c</columns>
        <columns>LesseeNo__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>STATUS_ACTIVE__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts including Inactive</label>
        <sharedTo>
            <group>AllExecutives</group>
            <group>AllExecutivesVPs</group>
            <group>AllExecutivesVPsDirectors</group>
            <group>AllMOSRoles</group>
            <group>AllNationalSales</group>
            <group>AllRegionalSales</group>
            <group>AllSalesRoles</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_HQ_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LesseeNo__c</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CustomerTypeID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Ryder_Parent_Account,Account.Ryder_Rental_Account</value>
        </filters>
        <label>My HQ Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_HQ_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>LesseeNo__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Account_Classification__c</columns>
        <columns>Total_Active_Vehicles__c</columns>
        <columns>CustomerTypeID__c</columns>
        <columns>Legal_Site_Duns__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Ryder_Parent_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>My HQ Customers</label>
    </listViews>
    <listViews>
        <fullName>My_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Classification__c</columns>
        <columns>Account_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CustomerTypeID__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>DB_Loc_Type__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <filters>
            <field>STATUS_ACTIVE__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Prospects</label>
        <sharedTo>
            <group>AllExecutives</group>
            <group>AllExecutivesVPs</group>
            <group>AllExecutivesVPsDirectors</group>
            <group>AllMOSRoles</group>
            <group>AllNationalSales</group>
            <group>AllRegionalSales</group>
            <group>AllSalesRoles</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Ryder_Account</fullName>
        <active>true</active>
        <description>Ryder Account</description>
        <label>Ryder Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ryder_FMS_Branch_Account</fullName>
        <active>true</active>
        <description>Ryder Child or Location Account</description>
        <label>Ryder FMS Branch Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ryder_Parent_Account</fullName>
        <active>true</active>
        <description>Ryder Parent Account (Single Location or HQ)</description>
        <label>Ryder FMS Parent Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ryder_Rental_Account</fullName>
        <active>true</active>
        <description>Ryder Pure Rental Account</description>
        <label>Ryder Pure Rental Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Vendor account record type for legal requests</description>
        <label>Vendor</label>
    </recordTypes>
</CustomObject>